k8s/apps/landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: landing
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: 80
