k8s/apps/landing/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: landing
  namespace: landing
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`scrimreaper.dev`)
      services:
        - kind: Service
          name: landing
          port: 80
